# mime

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: deploy-pages.yml  release.yml
assets/: main.css
src/: main.rs
src/components/: app.rs  editor.rs  mod.rs  note_item.rs  outline.rs  preview.rs  quick_switcher.rs  sidebar.rs  status_bar.rs  toast.rs  toolbar.rs
src/markdown/: mod.rs  renderer.rs
src/state/: app_state.rs  mod.rs  note.rs
src/storage/: desktop.rs  mod.rs  traits.rs  web.rs
