[package]
name = "argo"
version = "0.1.0"
edition = "2021"
description = "A distraction-free note-taking app"

[dependencies]
dioxus = { version = "0.6", features = ["macro"] }
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
async-std = "1.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
dirs = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.6", features = ["web"] }
gloo-storage = "0.3"
gloo-timers = "0.3"
wasm-bindgen = "0.2"

[features]
default = []
